--- a/Preprint/bibliography.bib
+++ b/Preprint/bibliography.bib
@@ -10,6 +10,19 @@
   file = {/Users/carmine/Zotero/storage/RSYYBUCI/Agrawal et al_2019_Differentiable Convex Optimization Layers.pdf}
 }
 
+@book{boydConvexOptimization2004,
+  title = {Convex Optimization},
+  author = {Boyd, Stephen P. and Vandenberghe, Lieven},
+  date = {2004},
+  publisher = {Cambridge University Press},
+  location = {Cambridge, UK ; New York},
+  isbn = {978-0-521-83378-3},
+  langid = {english},
+  pagetotal = {716},
+  keywords = {Convex functions,Mathematical optimization},
+  file = {/Users/carmine/Zotero/storage/8CYJLKAL/bv_cvxbook.pdf}
+}
+
 @article{henryGymANMReinforcementLearning2021,
   title = {Gym-{{ANM}}: {{Reinforcement}} Learning Environments for Active Network Management Tasks in Electricity Distribution Systems},
   shorttitle = {Gym-{{ANM}}},
